# SammerPractis

./: CMakeLists.txt  README.md  Tree.h  decodingHuffman_RLE.txt  encodingHuffman.txt  encodingHuffman_RLE.txt  encodingRLE.txt  main  main.cpp
